--- a/public/forget-password.html
+++ b/public/forget-password.html
@@ -89,7 +89,7 @@
                 messageDiv.classList.add('hidden');
 
                 try {
-                    const response = await fetch('http://localhost:5000/forgot-password', {
+                    const response = await fetch('/forgot-password', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify({ email }),
