--- a/public/signup.html
+++ b/public/signup.html
@@ -375,7 +375,7 @@
                               const email = emailField.value;
                               const password = passwordField.value;
 
-                              const response = await fetch("http://localhost:5000/signup", {
+                              const response = await fetch("/signup", {
                                     method: "POST",
                                     headers: { "Content-Type": "application/json" },
                                     body: JSON.stringify({ name, username, email, password }),
