Added post share feature

--- a/public/Home.html
+++ b/public/Home.html
@@ -30,7 +30,7 @@
         <!--image Logo -->
         <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
             <div class="flex items-center space-x-4">
-                <img src="images/fly-logo.png" alt="FLY Social Logo" class="h-10 w-10">
+                <img src="Images/fly-logo.png" alt="FLY Social Logo" class="h-10 w-10">
 
                 <!-- Search Box -->
                 <div class="relative group">
