--- a/public/Login.html
+++ b/public/Login.html
@@ -32,7 +32,7 @@
     <div id="login-form">
       <div class="text-center mb-8">
         <div class="logo inline-flex items-center justify-center w-16 h-16 logo-bg rounded-2xl mb-4 shadow-lg">
-          <img src="images/fly-logo.png" alt="FLY Social Logo">
+          <img src="Images/fly-logo.png" alt="FLY Social Logo">
         </div>
         <h1 class="text-3xl font-bold gradient-text mb-1" id="app-name">FLY Social</h1>
         <p class="text-gray-600 text-sm" id="tagline">Connect. Share. Fly High.</p>
