--- a/public/forget-password.html
+++ b/public/forget-password.html
@@ -31,7 +31,7 @@
 
                     <!--Logo Image -->
                     <div class="logo inline-flex items-center justify-center w-auto h-20  rounded-2xl mb-4 shadow-lg">
-                        <img src="images/fly-logo.png" alt="FLY Social Logo">
+                        <img src="Images/fly-logo.png" alt="FLY Social Logo">
                     </div>
 
                     <!-- Company Name -->
