--- a/public/chat.html
+++ b/public/chat.html
@@ -36,7 +36,7 @@
     <header class="bg-white border-b border-gray-200 flex-shrink-0 sticky top-0 z-10 shadow-sm">
         <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
             <div class="flex items-center gap-3 cursor-pointer" onclick="window.location.href='Home.html'">
-                <img src="images/fly-logo.png" class="h-8 w-8">
+                <img src="Images/fly-logo.png" class="h-8 w-8">
                 <h1 class="font-bold text-xl text-gray-800 tracking-tight">Messages</h1>
             </div>
             <button onclick="window.location.href='Home.html'" class="flex items-center gap-2 text-sm font-medium text-gray-600 hover:text-purple-600 transition-colors bg-gray-100 px-4 py-2 rounded-full">
