--- a/public/profile.html
+++ b/public/profile.html
@@ -19,7 +19,7 @@
     <header class="bg-white border-b border-gray-200 sticky top-0 z-50">
         <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
             <div class="flex items-center space-x-4 cursor-pointer" onclick="window.location.href='Home.html'">
-                <img src="images/fly-logo.png" alt="Logo" class="h-10 w-10">
+                <img src="Images/fly-logo.png" alt="Logo" class="h-10 w-10">
             </div>
             <div class="relative hidden md:block">
                 <input type="text" id="searchInput" oninput="handleSearch()" placeholder="Search users..." 
