--- a/public/signup.html
+++ b/public/signup.html
@@ -71,7 +71,7 @@
   <div id="signup-form">
        <div class="text-center mb-8">
       <div class="logo inline-flex items-center justify-center w-32 h-32  rounded-2xl mb-2 shadow-lg">
-       <img src="images/fly-logo.png" alt="FLY Social Logo">
+       <img src="Images/fly-logo.png" alt="FLY Social Logo">
       </div>
       <h1 class="text-3xl font-bold gradient-text mb-1" id="app-name">FLY Social</h1>
       <p class="text-gray-600 text-sm" id="tagline">Connect. Share. Fly High.</p>
